# physics

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build_launcher.cmd  install_prerequisites.cmd  run_fullphysics.cmd
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-gates.yml
bench/: README.md  compare_runs.py  record_baseline.py  render_report.py  run_benchmark.py  run_sweep.py  verify_pinned_baseline.py
bench/baselines/: README.md
docs/: README.md
docs/classroom/: example_set.md  labs.md
docs/contribute/: README.md  extension_guide.md
docs/learn/: 01_integration.md  02_collision_and_contacts.md  03_constraints.md  04_multiphysics.md  05_reproducibility.md
docs/reproducibility/: baselines.md  benchmark_governance.md  determinism_contract.md
docs/use/: quickstart_research.md
examples/classroom/: example_queries.c  example_replay.c
profiles/: headless_revolute_motor.json  headless_stack_metrics.json  schema.json  smoke.json
scripts/: build_windows.ps1  install_prerequisites.ps1  package_windows.ps1  run_app.ps1
scripts/launcher/: FullPhysicsLauncher.cs
src/: fullphysics.h
src/aero2d/: fp_aero2d.c  fp_aero2d.h
src/app/: debug_draw.c  debug_draw.h  demo_scenes.c  demo_scenes.h  main.c
src/core/: fp_arena.c  fp_arena.h  fp_assert.h  fp_log.c  fp_log.h  fp_math.c  fp_math.h  fp_time.c  fp_time.h  fp_time_win32.c  fp_timestep.c  fp_timestep.h
src/draw/: fp_camera2.c  fp_camera2.h  fp_draw2d.c  fp_draw2d.h  fp_draw_win32.c
src/fluid2d/: fp_fluid2d.c  fp_fluid2d.h
src/particles2d/: fp_particles2d.c  fp_particles2d.h
src/platform/win32/: fp_win32.c  fp_win32.h
src/rigid2d/: fp2_broadphase.c  fp2_broadphase.h  fp2_collision.c  fp2_collision.h  fp2_shape.c  fp2_shape.h  fp2_solver.c  fp2_solver.h  fp2_world.c  fp2_world.h
src/runtime/: fp_scene.c  fp_scene.h  fp_scene_data.c  fp_scene_data.h
src/simd/: fp_simd.c  fp_simd.h
tests/: test_aero.c  test_collision.c  test_constraints.c  test_determinism.c  test_determinism_only.c  test_fluid.c  test_main.c  test_queries.c  test_raycast.c  test_replay.c  test_revolute.c  test_scene.c  test_simd.c
tools/: fullphysics_headless.c
